--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "file-system",
+  "name": "file-system-simple",
   "version": "2.2.1",
   "description": "Strengthen the ability of file system",
-  "main": "file-system.js",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "jasmine"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/douzi8/file-system"
+    "type": "git"
   },
   "keywords": [
     "file",
@@ -20,19 +19,7 @@
     "mkdir",
     "rmdir"
   ],
-  "author": "douzi <liaowei08@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/douzi8/file-system/issues"
-  },
-  "homepage": "https://github.com/douzi8/file-system",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "mocha": "^2.0.1"
-  },
   "dependencies": {
-    "file-match": "^1.0.1",
-    "utils-extend": "^1.0.4"
+    "file-system": "^2.2.1"
   }
 }
