--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "rmdir"
   ],
   "dependencies": {
-    "file-system": "^2.2.1"
+    "file-system": "^2.2.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^1.0.1"
   }
 }
