--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-system": "^2.2.1",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-exec": "^1.0.1"
+    "grunt-exec": "^1.0.1",
+    "jasmine": "^2.5.2"
   }
 }
